force-app/main/default/objects/External_Complaint__e/External_Complaint__e.object-meta.xml
<CustomObject>
    <label>External Complaint</label>
    <pluralLabel>External Complaints</pluralLabel>
</CustomObject>