force-app/main/default/objects/External_Complaint__e/fields/External_Complaint_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Complaint_ID__c</fullName>
    <label>External Complaint ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>