force-app/main/default/objects/External_Complaint__e/fields/Order_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_ID__c</fullName>
    <label>Order Item ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>